; ModuleID = '/home/carl/AnghaBench/php-src/sapi/fuzzer/extr_fuzzer-parser.c_LLVMFuzzerTestOneInput.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/fuzzer/extr_fuzzer-parser.c_LLVMFuzzerTestOneInput.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"fuzzer.php\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @LLVMFuzzerTestOneInput(i32* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load i64, i64* %5, align 8
  %8 = icmp ugt i64 %7, 32768
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %24

10:                                               ; preds = %2
  %11 = load i64, i64* %5, align 8
  %12 = add i64 %11, 1
  %13 = call i8* @malloc(i64 %12)
  store i8* %13, i8** %6, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = load i32*, i32** %4, align 8
  %16 = load i64, i64* %5, align 8
  %17 = call i32 @memcpy(i8* %14, i32* %15, i64 %16)
  %18 = load i8*, i8** %6, align 8
  %19 = load i64, i64* %5, align 8
  %20 = getelementptr inbounds i8, i8* %18, i64 %19
  store i8 0, i8* %20, align 1
  %21 = load i8*, i8** %6, align 8
  %22 = load i64, i64* %5, align 8
  %23 = call i32 @fuzzer_do_request_from_buffer(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i8* %21, i64 %22)
  store i32 0, i32* %3, align 4
  br label %24

24:                                               ; preds = %10, %9
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i8* @malloc(i64) #1

declare dso_local i32 @memcpy(i8*, i32*, i64) #1

declare dso_local i32 @fuzzer_do_request_from_buffer(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
